--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ processed_with_embeddings.csv
 Final_Augmented_dataset_Diseases_and_Symptoms.csv
 dataset.csv
 disease_symptoms.csv
+merged_dataset.csv
